chore: improve response system
