# src/main/java/com/example/appevecommon/Service/Utilities/Responses/ErrorResponse.java
@@ -1,15 +1,0 @@
-package com.example.appevecommon.Service.Utilities.Responses;
-
-import lombok.Getter;
-import lombok.Setter;
-
-@Getter
-@Setter
-public class ErrorResponse {
-    private int statusCode;
-    private String message;
-    public ErrorResponse(int statusCode, String message){
-        this.message=message;
-        this.statusCode=statusCode;
-    }
-}
